--- a/.github/workflows/empty-commit.yml
+++ b/.github/workflows/empty-commit.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Create empty commit
         run: |
-          git config --global arnav1204aj "github-actions[bot]"
-          git config --global arnavj21@iitk.ac.in "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git commit --allow-empty -m "Automated empty commit"
           git push origin HEAD
