--- a/.github/workflows/empty-commit.yml
+++ b/.github/workflows/empty-commit.yml
@@ -2,8 +2,8 @@ name: Empty Commit Every 11 Hours
 
 on:
   schedule:
-    - cron: '0 */11 * * *'  # Every 11 hours
-  workflow_dispatch:  # Allows manual triggering
+    - cron: '0 */11 * * *'
+  workflow_dispatch:
 
 jobs:
   empty-commit:
@@ -11,10 +11,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create empty commit
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git commit --allow-empty -m "Automated empty commit"
-          git push origin HEAD
+          git push
+
